<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">

	<name>generic-rest-core-lib</name>
	<version>1.1.0</version>
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.generic.rest.core</groupId>
	<artifactId>generic-rest-core-lib</artifactId>
	<description>Generic Rest Core Lib</description>
	<packaging>jar</packaging>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.4</version>
		<relativePath />
	</parent>

	<properties>
		<java.version>21</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<downloadSources>true</downloadSources>
		<downloadJavadocs>true</downloadJavadocs>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		
		<!-- Dependencies -->
		<io-jsonwebtoken-version>0.12.6</io-jsonwebtoken-version>
		
		<!--  Plugins -->
		<maven-eclipse-plugin-version>2.10</maven-eclipse-plugin-version>
	</properties>

	<profiles>
		<profile>
			<id>dev</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<dependencies>
				<dependency>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-devtools</artifactId>
				</dependency>
			</dependencies>
		</profile>
		<profile>
			<id>prd</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
		</profile>
	</profiles>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
				
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>
		
		<dependency>
	        <groupId>com.github.ben-manes.caffeine</groupId>
	        <artifactId>caffeine</artifactId>
	    </dependency>
		
		<dependency>
		    <groupId>io.jsonwebtoken</groupId>
		    <artifactId>jjwt-api</artifactId>
		    <version>${io-jsonwebtoken-version}</version>
		</dependency>
		
		<dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <version>${io-jsonwebtoken-version}</version>
            <scope>runtime</scope>
        </dependency>
        
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId>
            <version>${io-jsonwebtoken-version}</version>
            <scope>runtime</scope>
        </dependency>
        
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		
		<dependency>
	    	<groupId>com.h2database</groupId>
	    	<artifactId>h2</artifactId>
	    	<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	 <build>
     	<plugins>
     		<plugin>
            	<groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                   	<release>${java.version}</release>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
            
     	    <plugin>
	        	<groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-surefire-plugin</artifactId>
		        <configuration>
		            <trimStackTrace>false</trimStackTrace>
		        </configuration>
		    </plugin>
		    
		    <plugin>
	        	<groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-eclipse-plugin</artifactId>
		        <version>${maven-eclipse-plugin-version}</version>
		        <configuration>
		            <downloadSources>true</downloadSources>
		            <downloadjavadocs>true</downloadjavadocs>
		        </configuration>
		    </plugin>
        </plugins>
	</build>

</project>